# 2020-08_AudioLooper

./: .gitignore  CMakeLists.txt  README.md
assets/: Master.bank  al_config.json
assets_ext/fmod_studio_project_euroclemens/euroclemens/.cache/: {31e0732f-1dda-4594-8f93-41a405ae32c2}.pdc  {41083dc4-f8f6-4ffa-b42a-24bf53aae0c0}.pdc  {4c94aab5-d8cc-44ae-9fe0-911ce06f8ab7}.pdc  {8991dbba-fc3a-47c9-8041-bd0430368d1c}.pdc  {d3c5efbb-d9bf-4ab5-af38-057223bc3aec}.pdc
assets_ext/fmod_studio_project_euroclemens/euroclemens/.unsaved/: metadataFileMapping.data
assets_ext/fmod_studio_project_euroclemens/euroclemens/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
config/cmake/: helpers.cmake
ext/: CMakeLists.txt
impl/game/: CMakeLists.txt  main.cpp
impl/gamelib/: CMakeLists.txt  game_properties.hpp  state_menu.cpp  state_menu.hpp
impl/jamtemplate/: CMakeLists.txt
impl/jamtemplate/common/: animation.cpp  button.cpp  button.hpp  conversions.cpp  conversions.hpp  game_base.cpp  game_base.hpp  game_interface.hpp  game_state.cpp
impl/jamtemplate/common/action_commands/: basic_action_commands.cpp
impl/jamtemplate/sfml/: game.cpp  game.hpp  render_window_lib.cpp  texture_manager_impl.cpp
src/: GameProperties.cpp  GameProperties.hpp  PlayBar.cpp  PlayBar.hpp  StateMenu.cpp  StateMenu.hpp  main.cpp
src/JamTemplate/: Animation.hpp  Button.hpp  Collision.hpp  Game.hpp  GameObject.hpp  GameState.hpp  InputManager.cpp  InputManager.hpp  Lerp.hpp  MathHelper.hpp  Noise.hpp  ObjectGroup.hpp  Random.cpp  Random.hpp  SmartObject.cpp  SmartObject.hpp  SmartShape.hpp  SmartSprite.hpp  SmartText.hpp  SplitString.hpp  SpriteFunctions.hpp  TextureManager.cpp  TextureManager.hpp  Timer.hpp  Transform.hpp  TweenAlpha.hpp  TweenBase.hpp  TweenColor.hpp  TweenPosition.hpp  TweenRotation.hpp  TweenScale.hpp  TweenVolume.hpp
src/StressTest/: MovementObject.hpp  Object.hpp  State1.cpp  State1.hpp  State2.cpp  State2.hpp  StateBox2d.cpp  StateBox2d.hpp  StateMovement.cpp  StateMovement.hpp  StateTween.cpp  StateTween.hpp  SwarmObject.hpp  main.cpp  main.cpp.orig
(+28 files in other folders)
